syntax = "proto3";

option go_package = "/pb;pb";

message SubMessage {
  int64 Pid = 1; // PID 
}

enum Status {
  Error = 0;
}

message SendMailReq { 
  int64 Pid = 1; // PID
  string Title = 2; 
  string Content = 3; // content
  Status Status = 4;
  SubMessage Sub = 5;
}

message SendMailResp {  }

service Mail {
  // fasong
  // asd
  rpc SendMail(SendMailReq) returns (SendMailResp); // hello
}